--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,1 +1,45 @@
-.header {background: red}
+*{
+  font-family: 'Inter', sans-serif;;
+}
+.wrapper__nav {
+  background-color: #7D7DFF;
+}
+.container__nav {
+  max-width: 1600px;
+  margin: 0 auto;
+  min-height: 150px;
+  display: flex;
+  align-items: center;
+
+  }
+.nav__ul {
+  display: flex;
+}
+.nav__link{
+  color: white;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 23px;
+  padding-right: 47px;
+}
+.container__but {
+  max-width: 250px;
+  max-height: 60px;
+
+}
+.but__but {
+  color: #645CD9;
+  background-color: white;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  text-align: center;
+  padding: 19px 54px 19px 74px;
+  border-radius: 30px;
+  box-shadow: 5px 5px 10px 0 #8482DB33;
+;
+  &:hover {
+    color: white;
+    background-color: #BBBBFF;
+  }
+}
