--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,45 +1,251 @@
-*{
+@import "../scss/variables";
+
+* {
   font-family: 'Inter', sans-serif;;
 }
+
 .wrapper__nav {
   background-color: #7D7DFF;
 }
+
 .container__nav {
   max-width: 1600px;
-  margin: 0 auto;
-  min-height: 150px;
+  padding-top: 60px;
+  padding-left: 30px;
+  padding-bottom: 30px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
 
-  }
+.nav__menu {
+  display: none;
+}
+
+.menu__container {
+  display: flex;
+  flex-direction: column;
+  padding: 24px 4.5px;
+}
+
+.menu__container_div {
+  background-color: white;
+  width: 27px;
+  height: 3px;
+  margin-top: 4.5px;
+}
+
 .nav__ul {
   display: flex;
 }
-.nav__link{
+
+.nav__link {
   color: white;
   font-weight: 500;
   font-size: 17px;
   line-height: 23px;
   padding-right: 47px;
 }
-.container__but {
-  max-width: 250px;
-  max-height: 60px;
 
-}
 .but__but {
   color: #645CD9;
   background-color: white;
   font-size: 18px;
   font-weight: 500;
   letter-spacing: 2px;
-  text-align: center;
   padding: 19px 54px 19px 74px;
   border-radius: 30px;
   box-shadow: 5px 5px 10px 0 #8482DB33;
-;
+
   &:hover {
     color: white;
     background-color: #BBBBFF;
+  }
+}
+
+.conteiner__contacts {
+  max-width: 1600px;
+  padding-top: 15px;
+  padding-bottom: 11px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 17px;
+  line-height: 22px;
+  font-weight: 500;
+  color: black;
+}
+.contacts__logo {
+  padding-right: 24px;
+}
+  .contacts_img {
+    object-fit: cover;
+  }
+
+
+.contacts__adress {
+  display: flex;
+  margin-right: 50px;
+}
+
+.contacts__clock {
+  display: flex;
+  margin-right: 90px;
+}
+
+.adress_img {
+  min-height: 25px;
+  min-width: 24px;
+  background: url("../icons/desktop/location_outline.svg");
+  background-repeat: no-repeat;
+  margin-right: 10px;
+}
+
+.clock_img {
+  min-height: 25px;
+  min-width: 24px;
+  background: url("../icons/desktop/clock.svg");
+  background-repeat: no-repeat;
+  margin-right: 10px;
+}
+
+.contacts__social {
+  margin-right: 90px;
+}
+
+.social__webs {
+  display: flex;
+  min-height: 25px;
+  min-width: 24px;
+  margin-right: 10px;
+  padding-top: 7px;
+}
+
+.viber_div {
+  background: url("../icons/desktop/fontisto_viber.svg");
+  background-repeat: no-repeat;
+}
+
+.teleg_div {
+  background: url("../icons/desktop/fa_brands_telegram.svg");
+  background-repeat: no-repeat;
+}
+
+.inst_div {
+  background: url("../icons/desktop/instagram .svg");
+  background-repeat: no-repeat;
+}
+
+.fb_div {
+  background: url("../icons/desktop/vector.svg");
+  background-repeat: no-repeat;
+}
+
+.socisal__phone {
+  display: flex;
+}
+
+.phone_div {
+  min-height: 25px;
+  min-width: 24px;
+  background: url("../icons/desktop/phone_outline.svg");
+  background-repeat: no-repeat;
+  padding-right: 7px;
+}
+
+.social__lang {
+  margin-left: 90px;
+  display: flex;
+
+  & > a {
+    font-size: 15px;
+    color: #645CD9;
+  }
+
+  & > a:active {
+    color: black;
+  }
+}
+
+.social__lang_div {
+  background-color: #232050;
+  width: 2px;
+  height: 16px;
+  margin: 0 10px;
+}
+
+.contacts__adressClock_md {
+  display: none;
+}
+
+@include respond-to('md') {
+  .nav__menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .social__lang_menu_md {
+    display: flex;
+
+    & > a {
+      font-size: 15px;
+      color: white;
+    }
+
+    & > a:active {
+      color: #BBBBFF;
+    }
+
+  }
+  .social__lang_div_md {
+    background-color: white;
+    width: 2px;
+    height: 16px;
+    margin: 0 10px;
+  }
+  .socisal__phone_md {
+    color: white;
+    display: flex;
+  }
+  .phone_div_md {
+    min-height: 25px;
+    min-width: 24px;
+    background: url("../icons/desktop/phone_white.svg");
+    background-repeat: no-repeat;
+    padding-right: 7px;
+  }
+  .container__but_md {
+  }
+  .contacts__adressClock_md {
+    display: block;
+  }
+  .contacts__social_md {
+    margin-right: 0;
+  }
+  .contacts__social_md_div {
+    display: none;
+    }
+  .adressClock_md_div {
+    display: flex;
+  }
+  .contacts__clock, .container__but, .contacts__adress, .container__nav_ul, .social__lang, .socisal__phone {
+    display: none;
+  }
+}
+
+@include respond-to('sm'){
+
+.social__lang_menu_md, .socisal__phone_md, .contacts__adressClock_md, .contacts__social_md {
+  display: none;
+}
+  .social__lang {
+    display: flex;
+    margin-left: 0;
+  }
+  .container__nav {
+    padding-left: 0;
+  }
+  .menu__container {
+    align-items: center;
   }
 }
