--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -6,9 +6,11 @@
 
 .wrapper__nav {
   background-color: #7D7DFF;
+
 }
 
 .container__nav {
+  margin: 0 auto;
   max-width: 1600px;
   padding-top: 60px;
   padding-left: 30px;
@@ -64,6 +66,7 @@
 }
 
 .conteiner__contacts {
+  margin: 0 auto;
   max-width: 1600px;
   padding-top: 15px;
   padding-bottom: 11px;
