--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -3,6 +3,7 @@
 .wrapper__footer {
   background-color: #F7F7FF;
   padding: 70px 0 0 24px;
+  margin-top: auto;
  }
 .container__footer {
   max-width: 1600px;
@@ -29,12 +30,14 @@
 .info__social_webs {
   display: flex;
  }
+
 .info__webs {
   display: flex;
   min-height: 25px;
   min-width: 24px;
   margin-right: 10px;
   padding: 7px 40px 0 0;
+  background:  no-repeat;
 }
 
 .info__viber_div {
@@ -145,7 +148,7 @@
   .info_logo_sm {
     display: flex;
     align-items: center;
-    padding-left: 0;
+    padding-top: 20px;
   }
   .info_sm_p {
     font-size: 17px;
